# xkcd_binpack

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: Canvas.cpp  Canvas.h  MessageException.h  Pixel.cpp  Point.cpp  Point.h  Shape.cpp  Shape.h  ShapeAlignedRectangle.cpp  ShapeAlignedRectangle.h  ShapeContainer.cpp  ShapeContainer.h  ShapeCreator.cpp  ShapeCreator.h  ShapePackerBase.cpp  ShapePackerBase.h  ShapePackerGrid.h  main.cpp
src/test/: CMakeLists.txt  test_ShapeAlignedRectangle.cpp
src/tinyxml2/: CMakeLists.txt
src/tools/: CMakeLists.txt  packer.cpp
src/xkcd_binpack/: CMakeLists.txt  Canvas.cpp  MessageException.h  Pixel.h  ShapeAlignedRectangle.cpp  ShapeAlignedRectangle.h  ShapeCreator.cpp  ShapePackerGrid.cpp
test/: test_ShapeAlignedRectangle.cpp
tinyxml2/: CMakeLists.txt
